# rppg-selective-arrhythmia

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: latex.yml  tests.yml
configs/: baseline_physnet.yaml  mcd_rppg_step_classifier.yaml  mitbih_baseline.yaml  selective_mcdropout.yaml  synth_rppg_baseline.yaml  synth_rppg_cinc.yaml
docs/: datasets.md  proposal.md  related_work.md
docs/baselines/: README.md
docs/baselines/lw_ccsd_v1/: findings.md
docs/baselines/mcd_rppg_v0/: findings.md  results.json
docs/baselines/mcd_rppg_v1/: results.json
docs/baselines/mcd_rppg_v2/: findings.md  results.json
docs/baselines/mitbih_uq_v1/: findings.md
docs/baselines/mitbih_v0_30s_weighted/: results.json
docs/baselines/mitbih_v1_10s_unweighted/: results.json
docs/baselines/mitbih_v2_10s_unweighted_fixed/: results.json
docs/baselines/rppg_extractor_v2/: findings.md
docs/baselines/sqi_deferral_v1/: findings.md
docs/baselines/synth_rppg_cinc_v1/: findings.md
docs/baselines/synth_rppg_v1/: findings.md
notebooks/: 01_explore_mcd_rppg.ipynb
paper/: README.md  build.py  main.tex  refs.bib  report.html  style.css
scripts/: continuous_lw_ccsd.py  download_cinc2017.py  download_mcd_rppg.py  download_mitbih.py  download_rppg10.py  dump_val_predictions.py  eval_selective.py  eval_sqi_deferral.py  eval_sqi_deferral_class_conditional.py  eval_sqi_deferral_per_class.py  extract_pulse.py  extract_rppg_batch.py  generate_paper_figures.py  generate_paper_figures_v2.py  lr_baseline_mcd_step.py  lr_baseline_mcd_step_ppgsync.py  optimize_class_conditional_weights.py  predict_hr_from_video.py  probe_ppg_sync.py  snr_stratified_evaluation.py  train_classifier.py  validate_rppg_on_mcd.py  validate_rppg_on_mcd_full.py  verify_split_coverage.py
src/rppg_sa/: __init__.py
src/rppg_sa/data/: __init__.py  cinc2017.py  cinc2017_synth_torch.py  (+6 more)
tests/: __init__.py  test_conformal.py  test_rppg_extractors.py  test_selective_metrics.py  test_smoke.py  test_split_coverage.py
(+34 files in other folders)
