[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rppg-selective-arrhythmia"
version = "0.1.0"
description = "Selective prediction with calibrated uncertainty for contactless arrhythmia detection from facial video (rPPG)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Shahnawaz Khan" }
]
keywords = [
    "rppg",
    "arrhythmia-detection",
    "atrial-fibrillation",
    "selective-prediction",
    "uncertainty-quantification",
    "medical-ai",
    "contactless-monitoring",
    "deep-learning",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "torch>=2.2",
    "torchvision>=0.17",
    "torchaudio>=2.2",
    "neurokit2>=0.2.7",
    "opencv-python>=4.9",
    "mediapipe>=0.10.9",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "wandb>=0.16",
    "wfdb>=4.1",
    "h5py>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "black>=24.2",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]
extractors = [
    "facenet-pytorch>=2.5",
]

[project.urls]
Repository = "https://github.com/ShahnawazKakarh/rppg-selective-arrhythmia"
Issues = "https://github.com/ShahnawazKakarh/rppg-selective-arrhythmia/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
